--- a/_doc/sphinxdoc/source/lectures/2022.rst
+++ b/_doc/sphinxdoc/source/lectures/2022.rst
@@ -15,3 +15,44 @@
     Elle ne riait pas parce qu'elle en avait envie.
     Elle riait parce que c'était sa façon de dire au monde
     qu'elle refusait de le craindre.
+
+.. quote::
+    :author: Richard Malka
+    :book: Le droit d'emmerder Dieu
+    :year: 2021
+    :index: propos
+    :pages: 71
+
+    Jean-Marie Le Pen, président du Front National,
+    le 2 février 2006 : "Les croyants ont droit au respect
+    de leur croyance, qu'ils soient musulmans, juifs
+    ou chrétiens." Non, ils n'en ont pas le droit,
+    Monsieur Le Pen, il faut aller réviser votre droit
+    à l'université.
+
+    Renaud Donnedieu de Vabres, ministre de la Culture
+    et de la Communication : "J'estime qu'il est aussi
+    de devoir de ce quotidien [France Soir] de respecter
+    les convictions religieuses et philosophiques de nos
+    concitoyens" Eh bien non, Monsieur Donnedieu de Vabres,
+    dont on aurait pu penser au regard de ses fonctions
+    que lui, au moins, chercherait à protéger la liberté
+    d'expression.
+
+.. quote::
+    :author: Richard Malka
+    :book: Le droit d'emmerder Dieu
+    :year: 2021
+    :index: croyance
+    :pages: 72
+
+    Les croyances ne peuvent jamais exiger le respect.
+    Seuls les hommes y ont droit. Aucune croyance,
+    aucune idée, aucune opinion ne peut exiger de ne 
+    pas être débattue, critiquée, caricaturée.
+
+    Parce qu'à défaut, on n'accepterait plus de vivre
+    qu'entre personnes pensant la même chose. Et tout
+    débat, toute controverse sera estimée "offensante".
+    C'est le chemin de l'obscurantisme. Les idées, ça
+    se confronte et ça se débat.
